# cli-wabbitemu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CLI WabbitEmu/CLI WabbitEmu.xcodeproj/: project.pbxproj
cli/: CMakeLists.txt  main.cpp  wabbitinstance.cpp  wabbitinstance.hpp
core/: CMakeLists.txt  alu.cpp  control.cpp  control.hpp  core.cpp  core.hpp  coretypes.hpp  device.cpp  device.hpp  indexcb.cpp  indexcb.hpp
debugger/: dbcommon.h  disassemble.c  disassemble.h  disassemblyview.cpp  disassemblyview.h  guidebug.cpp  guidebug.h
debugger/panes/: cpupane.cpp  cpupane.h  flagspane.cpp  flagspane.h  regpane.cpp  regpane.h
gui/: droptarget.h  gui.cpp  gui.h  guiapp.cpp  guiapp.h  guilcd.cpp  guilcd.h  guiopenfile.h  guiskinwindow.cpp  guiskinwindow.h  guivartree.cpp
gui/wizard/: romwizard.cpp  romwizard.h  wizardcalctype.h  (+3 more)
hardware/: 81hw.cpp  81hw.hpp  83hw.c  83hw.cpp  83hw.hpp  83phw.c  83phw.cpp  83phw.hpp  83psehw.c  83psehw.cpp  83psehw.hpp  86hw.cpp  86hw.hpp  CMakeLists.txt  keys.cpp  keys.h  keys.hpp  lcd.cpp  lcd.h  lcd.hpp  link.cpp  link.hpp  ti_stdint.hpp
interface/: CMakeLists.txt  calc.cpp  calc.hpp  state.cpp  state.hpp
utilities/: CMakeLists.txt  bcalls.hpp  exportvar.c  exportvar.cpp  exportvar.hpp  fileutilities.c  fileutilities.cpp  fileutilities.h  fileutilities.hpp  flags.hpp  gif.c  gif.cpp  gif.hpp  gifhandle.c  gifhandle.cpp  gifhandle.hpp  label.cpp  label.h  label.hpp  print.c  print.cpp  print.hpp  savestate.c  savestate.cpp  savestate.hpp  sendfile.cpp  sendfile.hpp  sound.cpp  sound.hpp  var.c  var.cpp  var.h  var.hpp
